# yolo-tensorrt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  yolov5_tutorial.md
.github/: FUNDING.yml
configs/: calibration_images.txt  yolov3.cfg  yolov4-csp.cfg  yolov4-tiny.cfg  yolov4.cfg  yolov5l.cfg  yolov5m.cfg  yolov5s.cfg  yolov5x.cfg
configs/yolov5-2.0/: yolov5s.cfg
configs/yolov5-3.0/: yolov5l.cfg  yolov5m.cfg  yolov5s.cfg  yolov5x.cfg
configs/yolov5-4.0/: yolov5l.cfg  yolov5m.cfg  yolov5s.cfg  yolov5x.cfg
configs/yolov5-5.0/: yolov5l.cfg  yolov5l6.cfg  yolov5m.cfg  yolov5m6.cfg  yolov5s.cfg  yolov5s6.cfg  yolov5x6.cfg
configs/yolov5-6.0/: yolov5l.cfg  yolov5m.cfg  yolov5n.cfg  yolov5s.cfg  yolov5x.cfg
extra/: class_timer.hpp
modules/: calibrator.cpp  calibrator.h  chunk.cu  chunk.h  class_detector.cpp  class_detector.h  class_yolo_detector.hpp  detect.cu  detect.h  ds_image.cpp  hardswish.cu  hardswish.h  kernel.cu  mish.cu  mish.h  plugin_factory.cpp  plugin_factory.h  trt_utils.cpp  trt_utils.h  yolo.cpp  yolo.h  yolo_config_parser.h  yoloplugin_lib.cpp  yolov2.h  yolov3.cpp  yolov3.h  yolov4.cpp  yolov4_scaled.cpp  yolov4_scaled.h  yolov5.cpp  yolov5.h
samples/: sample_detector.cpp
scripts/: CMakeLists.txt  download.py  yaml2cfg.ipynb  yaml2cfg.py
sln/: sln.sln
sln/Release/configs/: calibration_images.txt  yolov3.cfg
sln/dll_detector/: TensorRT-8.0.1.6_cuda-10.2.cudnn8.2.props  dll_detector.vcxproj  dll_detector.vcxproj.filters
sln/map/: maputil.cpp  maputil.hpp  readme.md  xml2txt.py
sln/map/testLables/: 202101050000.txt  202101050011.txt  202101050012.txt
sln/props/: TensorRT-5.1.5.0_cuda-10.0_cudnn-7.5.props  TensorRT-7.1.3.4_cuda-11.0_cudnn8.0.props  TensorRT-7.2.1.6_cuda-11.0.cudnn8.0.props  TensorRT-7.2.3.4_cuda-11.1.cudnn8.1.props  TensorRT-8.0.1.6_cuda-11.3_cudnn8.2.props  console_debug_release_x64 .props  cuda100_x64_release.props  cuda11_x64_release.props  dll_debug_release_x64.props  gflags_x64_release.props  opencv330_release_x64.props  opencv412_release_x64.props  opencv412_release_x64_vs2017.props
sln/test_dll/: test_dll.vcxproj  test_dll.vcxproj.filters
sln/test_trt_yolov3/: test_trt_yolov3.vcxproj  test_trt_yolov3.vcxproj.filters
